--- a/BeyondAcademy/BeyondAcademy/Views/Home/ForgotPassword.cshtml
+++ b/BeyondAcademy/BeyondAcademy/Views/Home/ForgotPassword.cshtml
@@ -1,9 +1,7 @@
-﻿
-@{
-    ViewData["Title"] = "Login";
+﻿@{
+    ViewData["Title"] = "Forgot Password";
     Layout = null;
 }
-
 <head>
     <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
@@ -21,47 +19,55 @@
     <div class="limiter" style="padding-top:85px;">
         <div class="container-login100" style="background-image: url('~/images/bg-01.jpg');height:50%;">
             <div class="wrap-login100">
-                <form asp-controller="Home" asp-action="Login" method="post" class="login100-form validate-form">
+                <form asp-controller="Home" asp-action="ForgotPassword" method="post" class="login100-form validate-form">
                     <span class="login100-form-logo">
                         <img src="~/images/logo/logo.png" alt="Logo" style="height:150%;" />
                     </span>
 
                     <span class="login100-form-title p-b-34 p-t-27">
-                        Log in
+                        Forgot Password
                     </span>
-                    @if (!ViewData.ModelState.IsValid)
+
+                    @if (ViewData["ErrorMessage"] != null)
                     {
                         <div class="alert alert-danger">
-                            @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-                            {
-                                <div>@error.ErrorMessage</div>}
-                        </div>}
-                    <div class="wrap-input100 validate-input" data-validate="Enter User ID">
-                        <input class="input100" type="text" id="userId" name="userId" placeholder="User ID" required>
+                            @ViewData["ErrorMessage"]
+                        </div>
+                    }
+
+                    @if (ViewData["SuccessMessage"] != null)
+                    {
+                        <div class="alert alert-success">
+                            @ViewData["SuccessMessage"]
+                        </div>
+                    }
+
+                    <div class="wrap-input100 validate-input" data-validate="Enter email or User ID">
+                        <input class="input100" type="text" id="userIdorEmail" name="userIdorEmail" placeholder="Email or User ID" required>
                         <span class="focus-input100" data-placeholder="&#xf207;"></span>
                     </div>
 
-                    <div class="wrap-input100 validate-input" data-validate="Enter password">
-                        <input class="input100" type="password" id="password" name="password" placeholder="Password" required>
+                    <div class="wrap-input100 validate-input" data-validate="Enter new password">
+                        <input class="input100" type="password" id="newPassword" name="newPassword" placeholder="New Password" required>
+                        <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Confirm new password">
+                        <input class="input100" type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm New Password" required>
                         <span class="focus-input100" data-placeholder="&#xf191;"></span>
                     </div>
 
                     <div class="container-login100-form-btn" style="padding:5px;">
                         <button type="submit" class="login100-form-btn" style="width:100%;">
-                            Login
+                            Reset Password
                         </button>
                     </div>
+                    <div class="container-login100-form-btn" style="padding:5px;">
+                        <a class="login100-form-btn" asp-controller="Home" asp-action="Login" style="width:100%;">
+                            Login
+                        </a>
+                    </div>
                 </form>
-                <div class="container-login100-form-btn" style="padding:5px;">
-                    <a class="login100-form-btn" asp-controller="Home" asp-action="ForgotPassword" style="width:100%;">
-                        Forgot Password
-                    </a>
-                </div>
-                @*@<div class="container-login100-form-btn" style="padding:5px;">
-                    <a type="submit" class="login100-form-btn" asp-controller="Home" asp-action="Index" style="width:100%;">
-                        Home
-                    </a>
-                </div>*@
             </div>
         </div>
     </div>
@@ -80,4 +86,3 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
-
