--- a/BeyondAcademy/BeyondAcademy/Views/Home/ChangePassword.cshtml
+++ b/BeyondAcademy/BeyondAcademy/Views/Home/ChangePassword.cshtml
@@ -1,8 +1,7 @@
-﻿@model BeyondAcademy.ViewModels.StudentRegistrationViewModel
-
+﻿@model BeyondAcademy.ViewModels.ChangePasswordViewModel
 @{
-    ViewData["Title"] = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "ChangePassword";
+    Layout = "~/Views/Shared/_StudentLayout.cshtml";
 }
 
 
@@ -23,13 +22,13 @@
     <div class="limiter" style="padding-top:85px;">
         <div class="container-login100" style="background-image: url('~/images/bg-01.jpg');height:50%;">
             <div class="wrap-login100">
-                <form asp-controller="Student" asp-action="Register" method="post" class="login100-form validate-form">
+                <form asp-controller="Home" asp-action="ChangePassword" method="post" class="login100-form validate-form">
                     <span class="login100-form-logo">
                         <img src="~/images/logo/logo.png" alt="Logo" style="height:150%;" />
                     </span>
 
                     <span class="login100-form-title p-b-34 p-t-27">
-                        Student Registration
+                        Change Password
                     </span>
 
                     @if (!ViewData.ModelState.IsValid)
@@ -54,49 +53,27 @@
                         </div>
                     }
 
-                    <div class="wrap-input100 validate-input" data-validate="Enter first name">
-                        <input class="input100" type="text" id="firstName" name="FirstName" value="@(Model?.FirstName ?? string.Empty)" placeholder="First Name" required>
-                        <span class="focus-input100" data-placeholder="&#xf207;"></span>
-                       @*<span asp-validation-for="FirstName" class="text-danger"></span>*@
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Enter last name">
-                        <input class="input100" type="text" id="lastName" name="LastName" value="@(Model?.LastName ?? string.Empty)" placeholder="Last Name" required>
-                        <span class="focus-input100" data-placeholder="&#xf207;"></span>
-                        @*<span asp-validation-for="LastName" class="text-danger"></span>*@
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Enter mobile number">
-                        <input class="input100" type="text" id="mobileNo" name="MobileNo" value="@(Model?.MobileNo ?? string.Empty)" placeholder="Mobile Number" required>
-                        <span class="focus-input100" data-placeholder="&#xf2be;"></span>
-                        @*<span asp-validation-for="MobileNo" class="text-danger"></span>*@
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Enter email">
-                        <input class="input100" type="email" id="email" name="Email" value="@(Model?.Email ?? string.Empty)" placeholder="Email" required>
-                        <span class="focus-input100" data-placeholder="&#xf1fa;"></span>
-                        @*<span asp-validation-for="Email" class="text-danger"></span>*@
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Enter date of birth">
-                        <input class="input100" type="date" id="dateOfBirth" name="DateOfBirth" value="@(Model?.DateOfBirth != null ? Model.DateOfBirth.ToString("yyyy-MM-dd") : string.Empty)" placeholder="Date of Birth" required>
-                        <span class="focus-input100" data-placeholder="&#xf133;"></span>
-                        @*<span asp-validation-for="DateOfBirth" class="text-danger"></span>*@
+                    <div class="wrap-input100 validate-input" data-validate="Enter current password">
+                        <input class="input100" type="password" id="currentPassword" name="CurrentPassword" value="@(Model?.CurrentPassword ?? string.Empty)" placeholder="Current Password" required>
+                        <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                        <span asp-validation-for="CurrentPassword" class="text-danger"></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Enter new password">
                         <input class="input100" type="password" id="newPassword" name="NewPassword" value="@(Model?.NewPassword ?? string.Empty)" placeholder="New Password" required>
                         <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                        <span asp-validation-for="NewPassword" class="text-danger"></span>
                     </div>
 
-                    <div class="wrap-input100 validate-input" data-validate="Enter confirm new password">
+                    <div class="wrap-input100 validate-input" data-validate="Confirm new password">
                         <input class="input100" type="password" id="confirmPassword" name="ConfirmPassword" value="@(Model?.ConfirmPassword ?? string.Empty)" placeholder="Confirm Password" required>
                         <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                     </div>
 
                     <div class="container-login100-form-btn" style="padding:5px;">
                         <button type="submit" class="login100-form-btn" style="width:100%;">
-                            Register
+                            Change Password
                         </button>
                     </div>
                 </form>
