update student and teacher completed

--- a/BeyondAcademy/BeyondAcademy/Views/Admin/MyProfile.cshtml
+++ b/BeyondAcademy/BeyondAcademy/Views/Admin/MyProfile.cshtml
@@ -67,7 +67,7 @@
                 <form asp-action="UpdateProfile" method="get">
                     <input type="hidden" name="AcId" value="@Model.AcId" />
                     <input type="hidden" name="RegdId" value="@Model.RegdId" />
-                    <div class="text-center">
+                    <div class="text-center mb-3">
                         <button type="submit" class="btn btn-primary">Update</button>
                     </div>
                 </form>
